test/analyze/type_check/traits/incorrect_implemented_trait_type_param_arity_errors.exp
Error: Incorrect number of type parameters. Expected 1 type parameter but found 2.
test/analyze/type_check/traits/incorrect_implemented_trait_type_param_arity_errors.myte:7:15-39
 7 | trait Trait2 { extends Trait1<Int, Int> }
   |                ^^^^^^^^^^^^^^^^^^^^^^^^